--- a/DBADash/Properties/Resources.resx
+++ b/DBADash/Properties/Resources.resx
@@ -133,6 +133,9 @@
   <data name="SQLAzureDBElasticPoolResourceStats" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\SQL\SQLAzureDBElasticPoolResourceStats.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="SQLAzureDBResourceGovernance" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\SQL\SQLAzureDBResourceGovernance.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="SQLAzureDBResourceStats" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\SQL\SQLAzureDBResourceStats.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
