--- a/DBADashServiceConfig/Properties/Resources.resx
+++ b/DBADashServiceConfig/Properties/Resources.resx
@@ -130,4 +130,7 @@
   <data name="Arch_Amazon-Simple-Storage-Service_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Arch_Amazon-Simple-Storage-Service_16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Information_blue_6227_16x16_cyan" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Information_blue_6227_16x16_cyan.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
